@@ -1,3 +1,8 @@
+2007-12-07 18:37 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/viewer3d/fe/unv/UNVParser.java (readGroup): Fix
+	previous patch to also work with groups of type 2430.
+
 2007-11-30 00:22 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/viewer3d/fe/unv/UNVParser.java (readGroup): Parse
